[package]
name = "lunarpunk"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.16.1", features = ["dynamic_linking","wayland"]}
#bevy = "0.16.1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
